--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["tkaden4 <thomas.kaden4@outlook.com>"]
 
 [dependencies]
+rayon="*"
 clap="2.31"
 pnet="0.21.0"
 matches="*"
